k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vulcano-community-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - vulcano-community.ddns.net
    secretName: vulcano-community-letsencrypt-cert
  rules:
  - host: vulcano-community.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vulcano-community-service
            port:
              number: 80
